# regression-uncertainty-measuring

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
artifacts/: simulated_data.csv
artifacts/20260127_080758/: data.csv  result.json
presentation/: README.md  formulas.md  slides_details.md
src/riskmeasures/: __init__.py  cli.py  methods.py  simulation.py  utils.py
src/riskmeasures-R/: cli.R  example.R  load_all.R  methods.R  simulation.R  utils.R
tests/: test_models.py  test_simulation.py
